fix image box spacing

--- a/style.css
+++ b/style.css
@@ -95,8 +95,10 @@ input[type="button"]:hover {
 }
 .image {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
+    align-items: center;
+    margin: 20px;
 }
 .image img {
     width: 200px;
@@ -104,9 +106,11 @@ input[type="button"]:hover {
     object-fit: cover;
     border: 3px solid #3882F6;
     border-radius: 10px;
-    margin: 5px 10px 0px 3px;
+    margin: 5px 10px 0px 20px;
 }
-/* Fix spacing issues with image text */
+.image-box {
+    width: 200px;
+}
 
 
 .quote-container {
